13 July 2015: Wouter
	- makedist produces sha1 and sha256 files for created binaries too.

9 July 2015: Wouter
	- 1.5.4 release tag
	- trunk has 1.5.5 in development.
	- Fix #681: Setting forwarders with unbound-control forward
	  implicitly turns on forward-first.

29 June 2015: Wouter
	- iana portlist update.
	- Fix alloc with log for allocation size checks.

26 June 2015: Wouter
	- Fix #677 Fix DNAME responses from cache that failed internal chain
	  test.
	- iana portlist update.

22 June 2015: Wouter
	- Fix #677 Fix CNAME corresponding to a DNAME was checked incorrectly
	  and was therefore always synthesized (thanks to Valentin Dietrich).

4 June 2015: Wouter
	- RFC 7553 RR type URI support, is now enabled by default.

2 June 2015: Wouter
	- Fix #674: Do not free pointers given by getenv.

29 May 2015: Wouter
	- Fix that unparseable error responses are ratelimited.
	- SOA negative TTL is capped at minimumttl in its rdata section.
	- cache-max-negative-ttl config option, default 3600.

26 May 2015: Wouter
	- Document that ratelimit works with unbound-control set_option.

21 May 2015: Wouter
	- iana portlist update.
	- documentation proposes ratelimit of 1000 (closer to what upstream
	  servers expect from us).

20 May 2015: Wouter
	- DLV is going to be decommissioned.  Advice to stop using it, and
	  put text in the example configuration and man page to that effect.

10 May 2015: Wouter
	- Change syntax of particular validator error to be easier for
	  machine parse, swap rrset and ip adres info so it looks like:
	  validation failure <www.example.nl. TXT IN>: signature crypto
	  failed from 2001:DB8:7:bba4::53 for <*.example.nl. NSEC IN>

1 May 2015: Wouter
	- caps-whitelist in unbound.conf allows whitelist of loadbalancers
	  that cannot work with caps-for-id or its fallback.

30 April 2015: Wouter
	- Unit test for type ANY synthesis.

22 April 2015: Wouter
	- Removed contrib/unbound_unixsock.diff, because it has been